automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -205,7 +205,7 @@
     }
    ],
    "source": [
-    "\"art vandelay\".tittle() # 'Art Vandelay'"
+    "\"art vandelay\".tittle  # 'Art Vandelay'"
    ]
   },
   {
