--- a/index.ipynb
+++ b/index.ipynb
@@ -189,18 +189,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'str' object has no attribute 'tittle'",
+     "ename": "SyntaxError",
+     "evalue": "EOL while scanning string literal (<ipython-input-5-9b09488571ac>, line 1)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-4-2f669a1a4520>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;34m\"art vandelay\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtittle\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# 'Art Vandelay'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m: 'str' object has no attribute 'tittle'"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-5-9b09488571ac>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    \"art vandelay'.title() # 'Art Vandelay'\u001b[0m\n\u001b[0m                                           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m EOL while scanning string literal\n"
      ]
     }
    ],
